--- a/ansible/docker/tasks/main.yml
+++ b/ansible/docker/tasks/main.yml
@@ -1,7 +1,9 @@
 ---
 - name: Wait for SSH
-      wait_for_connection:
-        timeout: 60
+  wait_for_connection:
+     delay: 5
+     imeout: 300
+
 - name: Update apt cache manually
 
   apt:
