--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,5 +1,16 @@
 ---
 - hosts: all
   become: true
+  gather_facts: false  # Stop Ansible from connecting immediately
+  
+  pre_tasks:
+    - name: Wait for SSH to become available
+      wait_for_connection:
+        delay: 10
+        timeout: 300
+
+    - name: Gather facts manually
+      setup:           # Now that connection is confirmed, get server info
+      
   roles:
     - docker
