--- a/ansible/docker/tasks/main.yml
+++ b/ansible/docker/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Wait for SSH
   wait_for_connection:
      delay: 5
-     imeout: 300
+     timeout: 300
 
 - name: Update apt cache manually
 
