--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,7 +1,2 @@
-#[web]
-#web1 ansible_host=3.127.147.155 ansible_user=ubuntu ansible_ssh_private_key_file=/home/porwal-ji/bhawna/tool_mysql/ansible/bhawna.pem
-#web2 ansible_host=3.76.46.234 ansible_user=ec2-user ansible_ssh_private_key_file=/home/porwal-ji/bhawna/tool_mysql/ansible/bhawna.pem ansible_python_interpreter=/usr/libexec/platform-python
-
-[local]
-localhost ansible_connection=local ansible_python_interpreter=/usr/bin/python3
-
+[web:vars]
+ansible_ssh_common_args='-o ProxyCommand="ssh -i /tmp/one_click.pem -o StrictHostKeyChecking=no -W %h:%p -q ubuntu@3.235.105.116" -o StrictHostKeyChecking=no'
