Refactor Ansible inventory for private instances

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,6 @@
-[web:vars]
-ansible_ssh_common_args='-o ProxyCommand="ssh -i /tmp/one_click.pem -o StrictHostKeyChecking=no -W %h:%p -q ubuntu@3.235.105.116" -o StrictHostKeyChecking=no'
+[private_instances]
+private_host ansible_host=PRIVATE_IP_PLACEHOLDER ansible_user=ubuntu
+
+[private_instances:vars]
+ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ProxyCommand="ssh -W %h:%p -q -o StrictHostKeyChecking=no ubuntu@BASTION_IP_PLACEHOLDER"'
+ansible_python_interpreter=/usr/bin/python3
