--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,13 @@
-# 1. MySQL ki official image pull karein
+# 1. Pull the official MySQL base image from Docker Hub
 FROM mysql:8.0
 
-# 2. Root password set karein (Zaroori hai)
+# 2. Set the mandatory Root password for the database
 ENV MYSQL_ROOT_PASSWORD=my-secret-pw
 
-# 3. (Optional) Ek database aur user pehle se bana dein
+# 3. Automatically create a specific database and user on startup
 ENV MYSQL_DATABASE=mydb
 ENV MYSQL_USER=myuser
 ENV MYSQL_PASSWORD=mypassword
 
-# 4. MySQL default port 3306 par chalta hai
+# 4. Document that the container listens on the default MySQL port
 EXPOSE 3306
