Rename inventory group from 'private_instances' to 'web'

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,6 +1,6 @@
-[private_instances]
+[web]
 private_host ansible_host=PRIVATE_IP_PLACEHOLDER ansible_user=ubuntu
 
-[private_instances:vars]
+[web:vars]
 ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ProxyCommand="ssh -W %h:%p -q -o StrictHostKeyChecking=no ubuntu@BASTION_IP_PLACEHOLDER"'
 ansible_python_interpreter=/usr/bin/python3
