--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,13 +6,14 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root123
       MYSQL_DATABASE: employee_db
-    ports:
-      - "3306:3306"
+    # ports:
+    #   - "3306:3306"  # Commented out to avoid conflict with host MySQL
     volumes:
       - mysql-data:/var/lib/mysql
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot123" ]
+      test:
+        ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot123"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -53,7 +54,6 @@ services:
 
 volumes:
   mysql-data:
-
 
 networks:
   employee-network:
